# RepoGuide

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/: current-status.md  deep-research-report.md  design_prompt.md  v0.2.0.md  v0.2.3.md
docs/repoguide_split_md/: 01_project_overview.md  03_architecture.md  08_indexing_and_parsing_design.md  15_api_server_design.md  18_security_and_privacy_design.md  20_final_summary.md  README.md
repoguide/: __init__.py
repoguide/cli/: __init__.py  app.py
repoguide/config/: __init__.py  config_loader.py  config_model.py  default_config.py
repoguide/core/: __init__.py  repoguide.py
repoguide/core/classifier/: file_classifier.py
repoguide/core/indexer/: __init__.py  (+1 more)
repoguide/storage/: __intit__.py  local_index_store.py
tests/: test_cli.py  test_cli_index.py  test_config_loader.py  test_language_detector.py  test_local_index_store.py  test_project_map_model.py  test_project_mapper_from_snapshot.py  test_python_parser.py  test_repo_file.py  test_repo_index_builder.py  test_repoguide_facade.py  test_repoguide_index.py  test_scanner_config.py  test_snapshot_builder.py  test_v0_pipeline.py
设计文档/repoguide_split_md/: 02_user_scenarios.md  04_development_roadmap.md  05_core_sdk_design.md  06_data_model_design.md  07_cli_design.md  09_retrieval_and_context_design.md  10_agent_workflow_design.md  11_workspace_overlay_design.md  12_diagnosis_design.md  13_patch_and_test_design.md  14_storage_and_trace_design.md  16_web_ui_later_design.md  17_evaluation_design.md  19_resume_packaging.md  README.md
(+16 files in other folders)
